--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <div class="navbar bg-base-100 bg-[#BADEFF] shadow-sm">
+      <div class="navbar bg-base-100 bg-[#c2d0de] shadow-sm">
         <div class="navbar-start">
           <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -71,13 +71,13 @@
               </li>
             </ul>
           </div>
-          <a href="" class="flex items-center gap-1">
+          <a href="" class="flex items-center gap-1 md:ml-10">
             <span class="text-lg font-bold">English</span>
             <img src="./assets/logo.png" alt="" />
             <span class="font-semibold font-bangla text-lg">জানালা</span>
           </a>
         </div>
-        <div class="navbar-end hidden lg:flex">
+        <div class="navbar-end hidden lg:flex md:mr-10">
           <ul class="menu menu-horizontal px-1 gap-4">
             <li>
               <a href=" " class="btn btn-outline btn-primary"
@@ -98,18 +98,45 @@
         </div>
       </div>
     </header>
-    <section class="w-11/12">
-      <div class="contan">
-        <h2><span class="text-[#422AD5s]">English </span>is Easy!!</h2>
-        <p>
+    <section
+      class="flex flex-col-reverse md:flex-row justify-between items-center gap-10 py-5 w-11/12 mx-auto"
+    >
+      <div class="contan flex-1 text-center md:text-left">
+        <h2 class="md:text-7xl text-4xl font-bold mb-8">
+          <span class="text-sky-500">English </span>is Easy!!
+        </h2>
+        <p class="font-bangla md:text-4xl md:w-[800px]">
           আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা
           আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
           অন্য একটি Level এ
         </p>
+        <div class="">
+          <input
+            type="text"
+            placeholder="Enter Your Name"
+            class="mb-4 mt-7 input input-secondary"
+          />
+          <br />
+          <input
+            type="password"
+            placeholder="password"
+            class="mb-4 input input-secondary"
+          />
+          <br />
+          <button class="btn btn-primary">Get Started</button>
+        </div>
       </div>
-      <div class="">
+      <div class="img flex">
         <img src="./assets/hero-student.png" alt="" />
       </div>
     </section>
+
+    <section>
+      <h2 class="md:text-7xl text-4xl font-bold mb-8 text-center">
+        <span class="text-sky-500">Let's </span> Learn Vocabularies
+      </h2>
+    </section>
+
+    <script src="./script/index.js"></script>
   </body>
 </html>
