--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
       </div>
     </header>
     <section
-      class="flex flex-col-reverse md:flex-row justify-between items-center gap-10 py-5 w-11/12 mx-auto"
+      class="flex flex-col-reverse md:flex-row justify-between items-center gap-10 py-5 w-11/12 mx-auto md:mt-[20px] mt-4"
     >
       <div class="contan flex-1 text-center md:text-left">
-        <h2 class="md:text-7xl text-4xl font-bold mb-8">
+        <h2 class="md:text-5xl text-3xl font-bold mb-8">
           <span class="text-sky-500">English </span>is Easy!!
         </h2>
-        <p class="font-bangla md:text-4xl md:w-[800px]">
+        <p class="font-bangla md:text-2xl md:w-[700px]">
           আজ থেকেই আপনার ভাষা শেখার যাত্রা শুরু করুন। আপনি যদি নতুন হন অথবা
           আপনার দক্ষতা বাড়াতে চান, আমাদের Interactive Lessons আপনাকে নিয়ে যাবে
           অন্য একটি Level এ
@@ -131,10 +131,14 @@
       </div>
     </section>
 
-    <section>
-      <h2 class="md:text-7xl text-4xl font-bold mb-8 text-center">
+    <section class="md:mt-[100px] mt-0">
+      <h2 class="md:text-5xl text-3xl font-bold mb-8 text-center">
         <span class="text-sky-500">Let's </span> Learn Vocabularies
       </h2>
+      <div
+        id="level-container"
+        class="flex flex-wrap justify-center gap-4"
+      ></div>
     </section>
 
     <script src="./script/index.js"></script>
