--- a/index.html
+++ b/index.html
@@ -140,7 +140,17 @@
         class="flex flex-wrap justify-center gap-4"
       ></div>
     </section>
-
+    <section
+      id="word-container"
+      class="bg-gray-100 py-10 w-9/12 mx-auto my-15 md:p-20 p-3 grid grid-cols-1 md:grid-cols-3 gap-5"
+    >
+      <div class="text-center col-span-full">
+        <p class="md:text-xl text-gray-400 md:font-medium py-8">
+          আপনি এখনো কোন Lesson Select করেন নি
+        </p>
+        <h2 class="md:text-[44px] font-bold">একটি Lesson Select করুন।</h2>
+      </div>
+    </section>
     <script src="./script/index.js"></script>
   </body>
 </html>
