--- a/index.html
+++ b/index.html
@@ -141,17 +141,53 @@
       ></div>
     </section>
 
+    <section class="flex justify-center py-9">
+      <div class="join">
+        <input
+          id="input-search"
+          class="input join-item"
+          placeholder="search vocabulary"
+        />
+        <button
+          id="btn-search"
+          class="btn join-item rounded bg-indigo-600 text-white hover:bg-blue-500"
+        >
+          search
+        </button>
+      </div>
+    </section>
+    <section id="spinner" class="flex justify-center py-9 hidden">
+      <span class="loading loading-bars loading-xl"></span>
+    </section>
+
     <section
       id="word-container"
       class="bg-gray-100 py-10 w-9/12 mx-auto my-15 md:p-20 p-3 grid grid-cols-1 md:grid-cols-3 gap-5"
     >
       <div class="text-center col-span-full">
-        <p class="md:text-xl text-gray-400 md:font-medium py-8">
-          আপনি এখনো কোন Lesson Select করেন নি
+        <p class="text-xl text-gray-400 md:font-medium py-8">
+          আপনি এখনো কোন Lesson Select করেন ন
         </p>
         <h2 class="md:text-[44px] font-bold">একটি Lesson Select করুন।</h2>
       </div>
     </section>
+    <!-- Open the modal using ID.showModal() method -->
+    <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
+    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div id="ditails-container" class="space-y-5"></div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form , it will close the modal -->
+            <button
+              class="btn bg-[#422AD5] text-white rounded hover:bg-slate-400"
+            >
+              Complete Learning
+            </button>
+          </form>
+        </div>
+      </div>
+    </dialog>
     <script src="./script/index.js"></script>
   </body>
 </html>
