--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     >
       <div class="text-center col-span-full">
         <p class="text-xl text-gray-400 md:font-medium py-8">
-          আপনি এখনো কোন Lesson Select করেন ন
+          আপনি এখনো কোন Lesson Select করেন নি </i>
         </p>
         <h2 class="md:text-[44px] font-bold">একটি Lesson Select করুন।</h2>
       </div>
